syntax = "proto3";

package repo;

option go_package = "/pb;pb";

service BookService {
	rpc GetAllBooks(GetAllBooksRequest) returns (GetAllBooksResponse);
	rpc BorrowBook(BorrowBookRequest) returns (BorrowBookResponse);
	rpc ReturnBook(ReturnBookRequest) returns (ReturnBookResponse);
	rpc UpdateBookStatus(UpdateBookStatusRequest) returns (UpdateBookStatusResponse);
}

message GetAllBooksRequest {
	string status = 1;
}

message GetAllBooksResponse {
	repeated Book books = 1;
}

message BorrowBookRequest {
	string user_id = 1;
	string book_id = 2;
}

message BorrowBookResponse {
	string message = 1;
}

message ReturnBookRequest {
	string user_id = 1;
	string book_id = 2;
}

message ReturnBookResponse {
	string message = 1;
}

message UpdateBookStatusRequest {
}

message UpdateBookStatusResponse {
	string message = 1;
}

message Book {
	string id = 1;
	string title = 2;
	string author = 3;
	string user_id = 4;
	string status = 5;
}

message BorrowedBook {
	string id = 1;
	string book_id = 2;
	string user_id = 3;
	string borrowed_date = 4;
	string return_date = 5;
}

message Status{
	string status = 1;
}